--- a/pokemon-frontend/src/app/app.component.html
+++ b/pokemon-frontend/src/app/app.component.html
@@ -1,3 +1,7 @@
-<h1 class="text-3xl font-bold underline">
-  Hello world!
-</h1>
+<div class="app-container">
+  <app-header></app-header>
+  <div class="main-container">
+    <app-main-content></app-main-content>
+  </div>
+  <app-footer></app-footer>
+</div>
