--- a/pokemon-frontend/src/app/app.component.html
+++ b/pokemon-frontend/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="app-container">
   <app-header></app-header>
+  <app-carousel></app-carousel>
   <div class="main-container">
     <app-main-content></app-main-content>
   </div>
